# pytorch_compliance_as_code

./: .gitignore  LICENSE  README.md  SCREENSHOT_GUIDE.md  conformity_coverage.md  pyproject.toml  references.md  regulatory_mapping.md  run_results.md  static_analysis.md
.devcontainer/: devcontainer.json  post_create.sh
configs/: default.yaml  talk_demo.yaml
data/legal/: eu_ai_act.md  eu_ai_act_structured.json  eu_ai_act_summary.md  gdpr_structured.json  gdpr_summary.md
examples/: crypten_demo.py
examples/01_audit_trail/: run.py
examples/02_fairness_gate/: run.py
examples/03_captum_explain/: run.py
examples/04_opacus_dp/: run.py
examples/05_compliant_dataset/: run.py
examples/06_before_after/: run.py
examples/06_full_pipeline_v1/: run.py
examples/07_crypten_secure/: run.py
examples/08_three_mechanisms/: run.py
examples/09_deployment_monitor/: run.py
examples/10_connected_pipeline/: run.py
examples/11_llm_finetune/: run.py
examples/pipeline/: dataset_imbalance.py  dispatcher_audit.py  fairness_gate.py  inference_drift.py
notebooks/: run_examples.ipynb
queries/: article14_gap.rq  coverage_matrix.rq  determinism_census.rq  export_gaps.rq  test_coverage.rq
src/: __init__.py  cli.py  config.py  gpu_monitor.py  logging_setup.py  security.py
src/annotators/: __init__.py  compliance_tagger.py  confidence.py  dispatcher_level.py  distributed_safety.py  export_survival.py  hook_consumers.py  lifecycle.py
src/assets/: __init__.py  handout.py  heatmap.py  screenshots.py  survival_matrix.py
src/catalog/: __init__.py  cpp_extractor.py  python_extractor.py  rst_extractor.py  yaml_extractor.py
src/converters/: __init__.py  csv_converter.py  markdown_converter.py  rdf_converter.py  sparql_notebook.py
src/extractors/: __init__.py  api_documentation.py  base.py  commit_history.py  compliance_tools.py  data_provenance.py  export_boundary.py  hookability.py  module_hierarchy.py  operator_determinism.py  sphinx_notes.py  supply_chain.py  test_suite.py
src/llm/: __init__.py  commit_classifier.py  cpp_translator.py  legal_parser.py  mapping_validator.py  (+3 more)
tests/: __init__.py  conftest.py  test_annotators.py  test_base.py  test_catalog.py  test_compliance_tagger.py  test_config.py  test_dedup.py  test_extractors.py  test_free_tier.py  test_gpu_monitor.py  test_rdf.py  test_security.py
torchcomply/: __init__.py  cli.py
(+47 files in other folders)
